no conditional format changes i protected sheets, related fdo#51636

Change-Id: I228ca76c34e3e18ea4d4f2197db20222319ebbd0